- Fixed issue with horizontal scrollbar in Bootstrap portal.

--- a/AngularMaterial/css/style.less
+++ b/AngularMaterial/css/style.less
@@ -5,9 +5,6 @@ body {
 button {
   cursor: pointer;
 }
-a:focus, a:hover {
-  text-decoration: none;
-}
 .main-container button.md-btn-success {
   background-color: #4caf50 !important;
   color: #fff !important;
@@ -161,36 +158,6 @@ md-dialog-actions {
 .action-span:not(:last-child) {
   margin-right: 20px;
 }
-.header-container {
-  background-color: #292b2c!important;
-}
-
-.header-container {
-   .logo, .links {
-     display: inline-block;
-     line-height: 4.5em;
-     margin: 0px 20px;
-   }
-   .links {
-     float: right;
-    ul {
-      line-height: 5em;
-      margin: 0px;
-      li {
-        display: inline-block;
-        font-size: 18px;
-        a{
-          color: #ffffff;
-          cursor: pointer;
-        }
-        .help-link {
-          margin-left: 20px;
-        }
-      }
-    }
-  }
-}
-
 a {
   color: #007bff;
 }
@@ -323,28 +290,6 @@ table th {
     text-align: center;
     .form-control  {
       display: inline;
-    }
-  }
-}
-/*
-Header styles
-*/
-.header-container {
-  text-align: center;
-  .logo{
-    float: left;
-  }
-  .links{
-    float: right;
-  }
-  .page-title {
-    display: inline-block;
-    h1 {
-      display: inline-block;
-      margin: 0;
-      color: #fff2f2;
-      font-size: 2.5em;
-      line-height: 2em;
     }
   }
 }
